Feature ETP-1361: Added LoginServlet