@@ -1,7 +1,7 @@
 package com.etendoerp.metadata.service;
 
 import com.etendoerp.metadata.Constants;
-import com.etendoerp.metadata.SessionManager;
+import com.etendoerp.metadata.auth.SessionManager;
 import com.etendoerp.metadata.exceptions.MethodNotAllowedException;
 import com.etendoerp.metadata.exceptions.NotFoundException;
 import com.etendoerp.metadata.http.HttpServletRequestWrapper;
@@ -24,7 +24,7 @@ import static org.openbravo.authentication.AuthenticationManager.STATELESS_REQUE
 
 public class ServletService extends BaseService {
     private static final Map<String, String> METHOD_MAP = new HashMap<>();
-    private static final Map<String, HttpSecureAppServlet> SERVLET_CACHE = new ConcurrentHashMap<>();
+    private static final Map<String, HttpBaseServlet> SERVLET_CACHE = new ConcurrentHashMap<>();
     private static final Map<Class<?>, Map<String, Method>> METHOD_CACHE = new ConcurrentHashMap<>();
     private static final Map<String, ServletRegistration> SERVLET_REGISTRY = new ConcurrentHashMap<>();
     private static final Map<String, Class<?>> CLASS_CACHE = new ConcurrentHashMap<>();
@@ -47,20 +47,19 @@ public class ServletService extends BaseService {
         return METHOD_MAP.getOrDefault(method, "service");
     }
 
-    private static HttpSecureAppServlet getOrCreateServlet(String servletName) {
+    private static HttpBaseServlet getOrCreateServlet(String servletName) {
         return SERVLET_CACHE.computeIfAbsent(servletName, key -> {
             try {
                 List<?> servlets = WeldUtils.getInstances(getClassCached(key));
-                return !servlets.isEmpty() ? (HttpSecureAppServlet) servlets.get(0) : createServletInstance(key);
+                return !servlets.isEmpty() ? (HttpBaseServlet) servlets.get(0) : createServletInstance(key);
             } catch (Exception e) {
                 throw new RuntimeException(e);
             }
         });
     }
 
-    private static HttpSecureAppServlet createServletInstance(String servletName) throws Exception {
-        return getClassCached(servletName).asSubclass(HttpSecureAppServlet.class).getDeclaredConstructor()
-                                          .newInstance();
+    private static HttpBaseServlet createServletInstance(String servletName) throws Exception {
+        return getClassCached(servletName).asSubclass(HttpSecureAppServlet.class).getDeclaredConstructor().newInstance();
     }
 
     private static Class<?> getClassCached(String className) {
